# photon-leptos

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
.sentrux/: rules.toml
e2e/: README.md
e2e/demo/: Cargo.toml
e2e/demo/src/: auth.rs  lib.rs  main.rs  photon_boot.rs  state.rs
e2e/demo/src/app/: mod.rs  pages.rs
e2e/demo/src/counter/: api.rs  context.rs  fns.rs  mod.rs
e2e/tests/: counter.happy.spec.ts  counter.keyed.spec.ts  counter.sad.spec.ts  fixtures.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/bench/: pls2.browser.spec.ts  pls3.refetch.spec.ts
infra/aws/mcp/: RUNBOOK.md  campaign-ssh.sh  profiles.json  resume-wave-t3.sh  run-hub-campaign.sh  run-profile-campaign.sh
infra/aws/mcp/user-data/: bootstrap.sh  run-matrix.sh
photon-axum/: Cargo.toml  README.md
photon-axum/src/: lib.rs
photon-axum/src/axum_ws/: auth.rs  descriptor.rs  hub.rs  key_resolve.rs  mod.rs  routes.rs  state.rs  ws.rs  ws_query.rs
photon-axum/tests/: key_policy_http.rs  ws_disconnect.rs  ws_hub.rs
photon-leptos/: Cargo.toml  DESIGN.md  QUALITY.md  README.md
photon-leptos-bench/: Cargo.toml  EXPERIMENTS.md  PERFORMANCE_STUDY.md  README.md
photon-leptos-bench/reports/: bm-pls0-hub-mem-embedded-aws-t3-medium.json  bm-pls0-rate100-aws-t3-small.json  bm-pls0-rate1000-aws-t3-medium.json  bm-pls1-broadcast_hub-mem-embedded-aws-c7i-large.json  bm-pls1-sqlite-embedded-aws-t3-small.json  bm-pls2-mem-embedded-aws-t3-medium.json  bm-pls3-mem-embedded-aws-t3-medium.json  bm-pls5-broadcast_hub-g1-mem-embedded-aws-c7i-large.json  bm-pls5-hub-mem-embedded-aws-t3-medium.json  bm-pls5-mem-embedded-aws-c7i-large.json  bm-pls5-per_subscribe-g1-mem-embedded-aws-c7i-large.json  bm-pls7-mem-embedded-aws-t3-medium.json  campaign-1a4c2dbd-a9eb-4092-8e52-3df3bafd1e6f-notes.md  campaign-2b0693b7-d913-4804-aef4-e64d52714e95-notes.md  campaign-30841be8-32e9-40bf-8547-823df3a9b5d0-notes.md  smoke-pls0-dev-wsl.json  smoke-pls0-full.json
photon-leptos-bench/reports/aws-c7i-large/: bm-pls0-hub-mem-embedded-aws-c7i-large.json  bm-pls0-mem-embedded-aws-c7i-large.json  bm-pls1-per_subscribe-mem-embedded-aws-c7i-large.json  bm-pls5-broadcast_hub-g256-mem-embedded-aws-c7i-large.json  bm-pls5-hub-mem-embedded-aws-c7i-large.json  bm-pls5-per_subscribe-g256-mem-embedded-aws-c7i-large.json  bm-pls9-mem-embedded-aws-c7i-large.json
photon-leptos-bench/reports/aws-smoke/: bm-pls0-rate100-aws-t3-medium.json  bm-pls0-sqlite-embedded-aws-t3-medium.json  bm-pls1-sqlite-embedded-aws-t3-medium.json
photon-leptos-bench/reports/aws-t3-medium/: bm-pls0-mem-embedded-aws-t3-medium.json  bm-pls1-mem-embedded-aws-t3-medium.json  bm-pls4-mem-embedded-aws-t3-medium.json  bm-pls5-mem-embedded-aws-t3-medium.json  bm-pls6-mem-embedded-aws-t3-medium.json  bm-pls8-mem-embedded-aws-t3-medium.json  bm-pls8-per_subscribe-mem-embedded-aws-t3-medium.json  smoke-pls0.json
photon-leptos-bench/reports/aws-t3-small/: bm-pls0-rate1000-aws-t3-small.json  bm-pls0-sqlite-embedded-aws-t3-small.json  substrate-bm-p2-aws-t3-small.json
photon-leptos-bench/src/: cli.rs  lib.rs  main.rs  matrix.rs  matrix_run.rs  run.rs  stats.rs
photon-leptos-bench/src/client/: mod.rs  ws_load.rs
photon-leptos-bench/src/experiments/: knee.rs  mod.rs  registry.rs  runner.rs
photon-leptos-bench/src/hardware/: mod.rs  profiles.rs
photon-leptos-bench/src/harness/: capture.rs  mod.rs
photon-leptos-bench/src/report/: mod.rs  schema.rs
photon-leptos-bench/src/server/: boot.rs  main.rs  mod.rs  routes.rs  state.rs
photon-leptos-macros/: Cargo.toml
photon-leptos-macros/src/: lib.rs  synced.rs
photon-leptos/src/: client.rs  error.rs  lib.rs  opts.rs  ws_url.rs
photon-leptos/src/client/: mod.rs
photon-leptos/src/server/: mod.rs
photon-leptos/tests/: server_ws.rs  synced_resource.rs  synced_resource_append.rs  synced_resource_replace.rs
