[workspace]
resolver = "2"
members = [
    "photon-axum",
    "photon-leptos",
    "photon-leptos-macros",
    "e2e/demo",
]

[[workspace.metadata.leptos]]
name = "photon-leptos-e2e"
bin-package = "photon-leptos-e2e-demo"
lib-package = "photon-leptos-e2e-demo"
site-root = "e2e/demo/site"
site-pkg-dir = "pkg"
end2end-dir = "e2e/tests"
end2end-cmd = "npx playwright test"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-features = ["ssr"]
lib-features = ["hydrate"]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
quark = { git = "https://github.com/unified-field-dev/quark.git", rev = "77e50b8374b65319ceeaf0b2ab1664a2919f517a" }
photon-runtime = { path = "../photon/photon-runtime", default-features = false, features = ["ssr", "mem"] }
photon-backend = { path = "../photon/photon-backend", default-features = false, features = ["ssr", "mem"] }
photon = { path = "../photon/photon", default-features = false, features = ["ssr", "mem"] }
axum = { version = "0.8.4", features = ["ws", "tokio", "http1"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
leptos = { version = "0.8.5", default-features = false }
leptos-use = { version = "0.18", default-features = false }
codee = { version = "0.3", default-features = false }
cfg-if = "1"
log = "0.4"
continuum = { git = "https://github.com/deathbreakfast/continuum.git", rev = "ead18a741104a44bdb2c92eb495087afc4dc5dda", default-features = false }
leptos_axum = { version = "0.8.5", default-features = true }
leptos_meta = { version = "0.8.5", default-features = false }
leptos_router = { version = "0.8.5", default-features = false }
dashmap = "6"
anyhow = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
tower-http = { version = "0.6", features = ["fs"] }
