[workspace]
resolver = "2"
members = [
    "photon-axum",
    "photon-leptos",
    "photon-leptos-macros",
    "e2e/demo",
    "photon-leptos-bench",
]
[[workspace.metadata.leptos]]
name = "photon-leptos-e2e"
bin-package = "photon-leptos-e2e-demo"
lib-package = "photon-leptos-e2e-demo"
site-root = "e2e/demo/site"
site-pkg-dir = "pkg"
end2end-dir = "e2e/tests"
end2end-cmd = "npx playwright test"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-features = ["ssr"]
lib-features = ["hydrate"]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# High-signal pedantic (keep clean; do not re-enable blanket pedantic/nursery)
redundant_clone = "warn"
manual_let_else = "warn"
unnecessary_wraps = "warn"
trivially_copy_pass_by_ref = "warn"

# Restriction — idiomatic production code
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.lints.rust]
# leptos-lints (Dylint) names are unknown to rustc/clippy alone
unknown_lints = "allow"
leptos_print_stdout = "deny"
leptos_event_target = "deny"
leptos_event_target_value = "deny"
leptos_unscoped_spawn = "deny"

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/leptos-rs/leptos-lints", tag = "v0.1.2" }]

[workspace.dependencies]
quark = { package = "uf-quark", version = "0.1.1" }
photon-runtime = { version = "=0.1.1", default-features = false, features = ["runtime", "mem"] }
photon-backend = { version = "=0.1.1", default-features = false, features = ["runtime", "mem"] }
photon = { package = "uf-photon", version = "=0.1.1", default-features = false, features = ["runtime", "mem"] }
axum = { version = "0.8.4", features = ["ws", "tokio", "http1"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
leptos = { version = "0.8.20", default-features = false }
leptos-use = { version = "0.18", default-features = false }
codee = { version = "0.3", default-features = false }
cfg-if = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter"] }
leptos_axum = { version = "0.8", default-features = true }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
dashmap = "6"
anyhow = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
tower-http = { version = "0.6", features = ["fs"] }

# photon-testkit is unpublished; git tag pulls workspace path crates that would
# duplicate crates.io photon-runtime. Force those onto the registry builds.
[patch."https://github.com/unified-field-dev/photon.git"]
photon-runtime = { version = "=0.1.1" }
photon-backend = { version = "=0.1.1" }
photon-telemetry = { version = "=0.1.1" }
uf-photon-core = { version = "=0.1.1" }
