[package]
name = "photon-axum"
version = "0.1.0"
edition = "2021"
description = "Axum WebSocket integration for Photon browser clients"
license = "MIT"
repository = "https://github.com/unified-field-dev/photon-leptos"

[lints]
workspace = true

[dependencies]
photon-runtime = { workspace = true, default-features = false }
photon-backend = { workspace = true, default-features = false }
quark = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
ssr = ["photon-runtime/runtime", "photon-backend/runtime", "dep:tokio"]

[package.metadata.docs.rs]
features = ["ssr"]
all-features = true

[dev-dependencies]
photon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net"] }
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }
futures = { workspace = true }
axum = { workspace = true }
