[package]
name = "photon-leptos-bench"
version = "0.1.0"
edition = "2021"
description = "WebSocket + Leptos integration benchmarks (BM-PLS*)"
publish = false
default-run = "photon-leptos-bench"

[[bin]]
name = "photon-leptos-bench"
path = "src/main.rs"

[[bin]]
name = "photon-leptos-bench-server"
path = "src/server/main.rs"

[features]
default = ["sqlite"]
sqlite = ["photon-testkit/sqlite"]

[dependencies]
photon = { path = "../../photon/photon", default-features = false, features = ["ssr"] }
photon-axum = { path = "../photon-axum", features = ["ssr"] }
photon-testkit = { path = "../../photon/photon-testkit", default-features = false, features = ["mem", "sqlite"] }
photon-runtime = { path = "../../photon/photon-runtime", default-features = false, features = ["ssr", "mem"] }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs"] }
futures = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
