[package]
name = "photon-leptos-bench"
version = "0.1.0"
edition = "2021"
description = "WebSocket + Leptos integration benchmarks (BM-PLS*)"
publish = false
default-run = "photon-leptos-bench"

[lints]
workspace = true

[[bin]]
name = "photon-leptos-bench"
path = "src/main.rs"

[[bin]]
name = "photon-leptos-bench-server"
path = "src/server/main.rs"

[features]
default = ["mem"]
mem = ["photon-testkit/mem"]

[dependencies]
photon = { workspace = true }
photon-axum = { path = "../photon-axum", features = ["ssr"] }
photon-testkit = { git = "https://github.com/unified-field-dev/photon.git", tag = "v0.1.1", default-features = false, features = ["mem"] }
photon-runtime = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs"] }
futures = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
