[package]
name = "photon-leptos-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macro #[photon_leptos::synced] for Leptos server-fn realtime hooks"
license = "MIT"
repository = "https://github.com/deathbreakfast/photon-leptos"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
